[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An embedded BLE stack"
categories = ["embedded", "no-std"]
keywords = ["arm", "ble", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
readme = "../README.md"
license = "0BSD"
name = "rubble"
version = "0.0.4"
edition = "2021"

[dependencies]
bitflags = "2.0.2"
heapless = "0.7.1"
p256 = { version = "0.13.0", features = ["arithmetic"] ,default_features = false }
rand_core = "0.6.3"
sha2 = { version = "0.10.6", default-features = false }
zerocopy = "0.6.1"
defmt = "0.3.2"

# The `ring` feature can be enabled to provide P-256 operations for non-embedded use cases.
ring = { version = "0.16.9", default_features = false, optional = true }

# If the `log` feature is enabled, the `log` crate's macros will be called at various points to dump
# packets, state, and events. By default, it is disabled.
log = { version = "0.4.8", optional = true }

[dev-dependencies]
p256 = { version = "0.13.0", features = ["arithmetic"], default_features = false }
ring = "0.16.9"